--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,7 +6,7 @@
 
 :root{
     --primary-color: #c5c5c5;
-    --secundary-color: #FFF1CC;
+    --secundary-color: #dcf5fc;
     --shadow-color: #CCC;
     --text-color: #FFF;
 }
